--- a/themes/solar/static/solar.css
+++ b/themes/solar/static/solar.css
@@ -255,8 +255,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     margin: 0;
-    padding: 0.7em 0 0.5em;
-    font-size: 2.5em;
+    padding: 0.8em 0 0.6em;
+    font-size: 2.3em;
     line-height: 1.2em;
     color: #222;
 }
@@ -333,6 +333,13 @@ cite, code, tt {
     letter-spacing: 0.01em;
     background-color: #eeeff2;
     font-style: normal;
+}
+
+h1 tt, h2 tt, h3 tt, h4 tt, h5 tt, h6 tt,
+div.sphinxsidebar tt {
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: normal !important;
 }
 
 hr {
