fix list bullet position issues on some browsers

--- a/themes/solar/static/solar.css
+++ b/themes/solar/static/solar.css
@@ -225,13 +225,11 @@ div.body ul {
 }
 
 div.body ul li {
-    position: relative;
+    text-indent: -0.8em;
 }
 
 div.body ul li:before {
-    content: "\2022";
-    position: absolute;
-    left: -15px;
+    content: "\2022\a0\a0 ";
     color: #777;
 }
 
