--- a/themes/solar/static/solar.css
+++ b/themes/solar/static/solar.css
@@ -360,11 +360,7 @@ pre {
     letter-spacing: 0.015em;
     line-height: 120%;
     padding: 0.7em;
-    white-space: pre-wrap;       /* css-3 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    overflow: auto;
 }
 
 pre a {
